# movie-app

./: pyproject.toml
movie_service/: asgi.py  db_config.py  settings.py  urls.py  wsgi.py
rating_app/: decorators.py  forms.py  models.py  urls.py  views.py
rating_app/migrations/: 0001_initial.py  0002_alter_movie_rating.py  0003_remove_movie_producer_movie_kp_rating_and_more.py  0004_movie_movie_user.py
rating_app/static/fonts/: Neutraface2Display-Bold.eot  Neutraface2Display-Medium.eot
rating_app/static/rating_app/css/: style.css
rating_app/static/rating_app/fonts/: Multiround.eot
rating_app/templates/: choose_movie.html  create_mark.html  marks.html  movie-base.html
rating_app/templates/rating_app/: base.html  choose_movie.html  create_mark.html  marks.html
rating_app/utils/: __init__.py  cache.json  filter.py  kinopoisk_api.py  movie_data.py
user_app/: forms.py  urls.py  views.py
user_app/static/user_app/css/: style.css
user_app/static/user_app/fonts/: Current.eot
user_app/templates/: index.html  login.html  register.html  user-base.html
user_app/templates/user_app/: base.html  index.html  login.html  register.html
wishlist_app/: forms.py  models.py  urls.py  views.py
wishlist_app/migrations/: 0001_initial.py  0002_wish_kp_rating.py  0003_wish_kp_id.py  0004_wish_year.py
wishlist_app/static/wishlist_app/js/: script.js
wishlist_app/templates/wishlist_app/: add_movie.html  base.html  select_movie.html  wishlist.html
